Reclaimed 16 pixels of horizontal space in the detail form. Fixed right-alignment issues with e-mail link. Added code to limit the width of the timezone selector to avoid horizontal scrolling when it gets populated with long exemplar city names.
git-svn-id: svn+ssh://svn.osafoundation.org/svn/server/cosmo/trunk@3466 5fd0b11a-f2f7-0310-948e-c8f80ebed640

--- a/src/main/webapp/templates/default/ui.css
+++ b/src/main/webapp/templates/default/ui.css
@@ -802,11 +802,15 @@ td.dataDisplayLabel {
 #eventInfoDiv {
     position:absolute;
 }
+#eventInfoDivContent {
+    padding-left:12px;
+    padding-right:8px;
+    padding-top:6px;
+}
 
 /* "Email this event" link */
-#emailThisEventLink {
-	position: relative;
-	left: 14em;
+#emailThisEventDiv {
+    text-align:right;
 }
 
 /* Fake popup for modal dialog box
